# MyHarnessPy

./: .env.example  .gitignore  5_18.md  ARCHITECTURE.md  LEARNING.md  ROADMAP.md  USER_GUIDE.md  _append_tests.py  architecture.html  architecture.mmd  architecture_compact.html  architecture_diagram.html  cli.py  cognitive_loop.html  config.yaml  loc_report.html  pyproject.toml  qt.md
.claude/: settings.json
.myharness/commands/: echo.md  review.md
.myharness/personas/: README.md  coder.md
.myharness/skills/: code-review.md  data-analyst.md  file-organizer.md  python-dev.md  skills.yaml  template.md
api/: rest.py  ws.py
harness/: __init__.py  config.py  factory.py  skills.py
harness/commands/: __init__.py  builtin.py  loader.py  models.py  registry.py
personas/: coder.md  default.md  researcher.md  strict-reviewer.md
scripts/: loc.py  test_ws_stream.py
skills/: code-review.md  data-analyst.md  python-dev.md  skills.yaml  template.md
static/: index.html  stream_test.html
test_directory/: test_file.txt
test_tools/: experiment.txt
tests/: conftest.py  test_commands.py  test_compression.py  test_config.py  test_e2e_question_trigger.py  test_engine.py  test_llm.py  test_mcp.py  test_prompt_cache.py  test_prompt_cache_integration.py  test_question_mode.py  test_question_mode_trigger.py  test_question_mode_v2.py  test_rest_tool_inventory.py  test_spawn_agent.py  test_storage.py  test_streaming.py  test_tools.py  test_web_search_fetch.py
website/: app.py
website_project/: about.html  contact.html  index.html  login.html  portfolio.html
(+57 files in other folders)
