[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "myharnesspy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "anthropic>=0.28",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["harness*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
